Add cards for lecture 6

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -1272,4 +1272,154 @@
 
 
 %%%%%%%%% Vorlesung 6 %%%%%%%%%%%%
+
+\begin{note}
+    \tags{Lemma}
+    \xplain{e16fae78-c78b-11ec-9d64-0242ac120002}
+
+    \begin{field}
+        Jede Isometrie $f$ eines endlich-dimensionalen euklidischen Vektorraums $V\neq \{ 0\}$ besitzt \dots \hint{Untervektorraum}
+    \end{field}
+    \begin{field}
+        Jede Isometrie $f$ eines endlich-dimensionalen euklidischen Vektorraums $V\neq \{ 0\}$ besitzt einen $f$-stabilen Untervektorraum der Dimension 1 oder 2.
+        \cite{Lemma 11.11}
+    \end{field}
+\end{note}
+\begin{note}
+    \tags{Satz}
+    \xplain{950750fa-c78a-11ec-9d64-0242ac120002}
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines \hide{endlich-dimensionalen} unitären Vektorraums wird bezüglich einer geeigneten Orthonormalbasis dargestellt von einer Diagonalmatrix
+        \[\begin{pmatrix}
+             a_1 \\
+            &\ddots\\
+            &&a_n
+        \end{pmatrix}\]
+        mit $a_i \in \CC, \vert a_i \vert = 1$.
+    \end{field}
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines endlich-dimensionalen unitären Vektorraums wird bezüglich einer geeigneten Orthonormalbasis dargestellt von einer Diagonalmatrix
+        \[\begin{pmatrix}
+             a_1 \\
+            &\ddots\\
+            &&a_n
+        \end{pmatrix}\]
+        mit $a_i \in \CC, \vert a_i \vert = 1$.
+        \cite{Satz 11.12}
+    \end{field}
+
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines endlich-dimensionalen unitären Vektorraums wird \hide{bezüglich einer geeigneten Orthonormalbasis} dargestellt von einer Diagonalmatrix
+        \[\begin{pmatrix}
+             a_1 \\
+            &\ddots\\
+            &&a_n
+        \end{pmatrix}\]
+        mit $a_i \in \CC, \vert a_i \vert = 1$.
+    \end{field}
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines endlich-dimensionalen unitären Vektorraums wird bezüglich einer geeigneten Orthonormalbasis dargestellt von einer Diagonalmatrix
+        \[\begin{pmatrix}
+             a_1 \\
+            &\ddots\\
+            &&a_n
+        \end{pmatrix}\]
+        mit $a_i \in \CC, \vert a_i \vert = 1$.
+        \cite{Satz 11.12}
+    \end{field}
+
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines endlich-dimensionalen unitären Vektorraums wird bezüglich einer geeigneten Orthonormalbasis dargestellt von \dots
+    \end{field}
+    \begin{field}
+        \textbf{Struktursatz für unitäre Isometrien}
+
+        Jede Isometrie eines endlich-dimensionalen unitären Vektorraums wird bezüglich einer geeigneten Orthonormalbasis dargestellt von einer Diagonalmatrix
+        \[\begin{pmatrix}
+             a_1 \\
+            &\ddots\\
+            &&a_n
+        \end{pmatrix}\]
+        mit $a_i \in \CC, \vert a_i \vert = 1$.
+        \cite{Satz 11.12}
+    \end{field}
+\end{note}
+
+\tags{LinA-II-12-Hauptachsentransformation}
+
+\begin{note}
+    \tags{Def}
+    \xplain{f145cd78-c790-11ec-9d64-0242ac120002}
+
+    \begin{field}
+        Ein Endomorphismus $f$ eines euklidischen oder unitären Vektorraums $(V, \scprod{\cdot}{\cdot})$ ist \textbf{selbstadjungiert}, falls \dots
+    \end{field}
+    \begin{field}
+        Ein Endomorphismus $f$ eines euklidischen oder unitären Vektorraums $(V, \scprod{\cdot}{\cdot})$ ist \textbf{selbstadjungiert}, falls
+        \[\scprod{f(\vec{v})}{\vec{w}} = \scprod{\vec{v}}{f(\vec{w})} \quad \forall \vec{v,w}\in V\]
+        \cite{Def. 12.1}
+    \end{field}
+
+    \begin{field}
+        Sei $A\in \Mat_K(n\times n), K\in\{\RR,\CC\}$. Dann ist äquivalent:
+        \begin{itemize}
+            \item \hide{Die lineare Abbildung $f_A: K^n\longrightarrow K^n$ ist \textbf{selbstadjungiert} bezüglich des Standardskalarprodukts auf $K^n$.}
+            \item $A$ ist symmetrisch ($A = A^T$) \\ bzw. hermitesch ($A = \overline{A^T}$)
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        Sei $A\in \Mat_K(n\times n), K\in\{\RR,\CC\}$. Dann ist äquivalent:
+        \begin{itemize}
+            \item Die lineare Abbildung $f_A: K^n\longrightarrow K^n$ ist \textbf{selbstadjungiert} bezüglich des Standardskalarprodukts auf $K^n$.
+            \item $A$ ist symmetrisch ($A = A^T$) \\ bzw. hermitesch ($A = \overline{A^T}$)
+        \end{itemize}
+        \cite{Notiz 12.2}
+    \end{field}
+
+    \begin{field}
+        Sei $A\in \Mat_K(n\times n), K\in\{\RR,\CC\}$. Dann ist äquivalent:
+        \begin{itemize}
+            \item Die lineare Abbildung $f_A: K^n\longrightarrow K^n$ ist \textbf{selbstadjungiert} bezüglich des Standardskalarprodukts auf $K^n$.
+            \item \hide{$A$ ist symmetrisch ($A = A^T$) \\ bzw. hermitesch ($A = \overline{A^T}$}
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        Sei $A\in \Mat_K(n\times n), K\in\{\RR,\CC\}$. Dann ist äquivalent:
+        \begin{itemize}
+            \item Die lineare Abbildung $f_A: K^n\longrightarrow K^n$ ist \textbf{selbstadjungiert} bezüglich des Standardskalarprodukts auf $K^n$.
+            \item $A$ ist symmetrisch ($A = A^T$) \\ bzw. hermitesch ($A = \overline{A^T}$)
+        \end{itemize}
+        \cite{Notiz 12.2}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{eaa8db5e-c790-11ec-9d64-0242ac120002}
+    \begin{field}
+        Alle Eigenwerte eines \textbf{selbstadjungierten Endomorphismus} \dots
+    \end{field}
+    \begin{field}
+        Alle Eigenwerte eines \textbf{selbstadjungierten Endomorphismus} sind reell.
+        \cite{Satz 12.3}
+    \end{field}
+
+    \begin{field}
+        Eigenvektoren zu verschiedenen Eigenwerten eines \textbf{selbstadjungierten Endomorphismus} \dots
+    \end{field}
+    \begin{field}
+        Eigenvektoren zu verschiedenen Eigenwerten eines \textbf{selbstadjungierten Endomorphismus} stehen senkrecht zueinander.
+        \cite{Satz 12.3}
+    \end{field}
+\end{note}
 \end{document}
